syntax = "proto3";
package com.ivyxjc.libra.core.models.protoModels;

option java_outer_classname = "ProtoRawTransaction";

message PRawTransaction {
    string guid = 1;
    int32 sourceId = 2;
    int64 sequence = 3;
    string msgId = 4;
    int32 version = 5;
    int32 duplicateFlg = 6;
    string rawRecord = 7;
}
